[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://Textures/FullHeartUI.png" type="Texture" id=2]

[node name="HealthUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="."]
visible = false
margin_left = 120.0
margin_top = 80.0
margin_right = 208.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TryAgain"]
margin_left = 15.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 16.0
text = "Try Again?"
[connection signal="button_down" from="TryAgain" to="." method="_on_TryAgain_button_down"]
